Bug 345982 Object - DOM Node does not update when changing values of a node's attributes patch by sylvain.pasche@gmail.com r=timeless sr=neil